src/test/samples/invalidSamples/invalidSample.pl
#region FirstRegion
my $x = 42;
#endregion

  # endregion Invalid end boundary
  # region Invalid start boundary

#  region Second Region
sub my_function {
  #  region    InnerRegion    
  print "Hello, World!\n";
  #  endregion   ends InnerRegion  

  #region
  my $y = 24;
  #endregion
}
#  endregion
